
tslib 1.21 - unreleased
================================
This release includes libts version 0.10.3 and the following changes:
* various fixes for cmake builds


tslib 1.20 - released 2019-05-21
================================
This release includes libts version 0.10.2 and the following changes:
* improved documentation for systemd

This release includes the following bugfixes:
* 338891d doc: add CMakeLists.txt to the tarball (fixes cmake build)
* 834b98f variance: move the singletouch warning to debug (fixes ts_uinput)
* 84e15b5 doc: add missing manpages to releases and sort them alphabetically
* 2be6a0e ts_setup: fix possible memory leak


tslib 1.19 - released 2019-01-24
================================
This release includes libts version 0.10.1 and the following changes:
* ts_calibrate: close framebuffer after validation. add timeout option -s for it

This release includes the following bugfixes:
* input-raw / ts_uinput: fix MT type A devices


tslib 1.18 - released 2018-11-27
================================
This release includes libts version 0.10.0 and the following changes:
* support for screen-rotation in ts_calibrate and linear module
* add experimental module_raw input_evdev that needs libevdev
* new ts_calibrate --min_interval option to avoid inaccurate calibration
* add ts_calibrate --validate functionality to verify the calibration
* add ts_conf_get() and ts_conf_set() API
* improved CI

This release includes the following bugfixes:
* a5b39bf waveshare-raw: avoid possible overflow by casting a multiplication
* cd26eb5 ts_setup: fix a memory leak
* e73b6d1 input-raw: set 0 pressure if ABS_MT_TOUCH_MAJOR is 0


tslib 1.17 - released 2018-09-06
================================
This release includes libts version 0.9.2 and the following changes:
* improved backwards compatibility for ts_uinput and the library
* added support for cmake build system

This release includes the following bugfixes:
* f65e5eb median: fix pen_down propagation for read_mt()

