@@ -31,6 +31,9 @@ module pthres pmin=1
 # Uncomment if needed to filter noise samples
 module dejitter delta=100
 
+# Uncomment to define threshold in number of events from device
+# module evthres N=5
+
 # Uncomment and adjust if you need to invert an axis or both
 # module invert x0=800 y0=480
 
