@@ -14,6 +14,7 @@ TSLIB_DECLARE_MODULE(debounce);
 TSLIB_DECLARE_MODULE(skip);
 TSLIB_DECLARE_MODULE(invert);
 TSLIB_DECLARE_MODULE(iir);
+TSLIB_DECLARE_MODULE(evthres);
 TSLIB_DECLARE_MODULE(lowpass);
 
 TSLIB_DECLARE_MODULE(arctic2);
