@@ -143,6 +143,7 @@ make distclean
 	--enable-debounce=static \
 	--enable-median=static \
 	--enable-iir=static \
+	--enable-evthres=static \
 	--enable-invert=static \
 	--enable-variance=static \
 	--enable-dejitter=static \
