@@ -3,6 +3,7 @@ tslib 1.21 - unreleased
 ================================
 This release includes libts version 0.10.3 and the following changes:
 * various fixes for cmake builds
+* new filter plugin: `module evthres`
 
 
 tslib 1.20 - released 2019-05-21
